--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,3 +1,3 @@
-chromedriver-binary==2.45.0
-selenium==3.141.0
-urllib3==1.24.1
+chromedriver-binary==74.0.3729.6.0
+selenium>=3.141.0
+urllib3>=1.24.1
